Bug #809: Certain insanely looking file causes OpenGrok to consume more than 1.5G heap space
Adding an abstraction around the hash map in Ctags.java to make it easier
to change the implementation. This is just a refactoring in preparation for
the fix.